style(index.css): comentar el estilo de la etiqueta math fix(renderer.ts): cambiar el nombre del sprite de character1 y corregir la ruta de la imagen en parse_background feat(renderer.ts): añadir diálogo para preparar el juego y diálogo para preguntar la solución de una ecuación style(background.ts): corregir la ruta de la imagen en parse_background feat(character.ts): añadir opciones a la función say de Character para verificar la visibilidad y cambiar el nombre de las opciones en el constructor de Character En index.css se ha comentado el estilo de la etiqueta math para evitar que se aplique en la página. En renderer.ts se ha cambiado el nombre del sprite de character1 y se ha corregido la ruta de la imagen en parse_background. Además, se ha añadido un diálogo para preparar el juego y otro diálogo para preguntar la
refactor(simple_dialog.ts): reorganizar el código y cambiar la firma de la función simple_dialog
La función simple_dialog ahora recibe un objeto de opciones en lugar de una lista de argumentos. Esto hace que la función sea más fácil de usar y más legible. Además, se ha reorganizado el código para que sea más fácil de leer y mantener.

--- a/src/index.css
+++ b/src/index.css
@@ -136,11 +136,11 @@ body {
     outline: none;
 }
 
-math {
-    font-family: STIX Two Text, KaTeX_Math, "Cambria Math", serif;
-    /*font-size: 1.2em;*/
-    font-weight: 500;
-}
+/*math {*/
+/*    font-family: STIX Two Text, KaTeX_Math, "Cambria Math", serif;*/
+/*    !*font-size: 1.2em;*!*/
+/*    font-weight: 500;*/
+/*}*/
 
 munderover > *:last-child {
     padding-bottom: .2em;
